--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 ﻿cvlib==0.2.7
 cmake>=3.21.0
-dlib @ dlib-19.24.1-cp311-cp311-win_amd64.whl
+dlib==19.24.1
 opencv-python==4.9.0.80
 face-recognition==1.3.0
 face-recognition-models==0.3.0
