--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 ﻿cvlib==0.2.7
-opencv-python-headless==4.9.0.80
+opencv-python==4.9.0.80
 cmake>=3.21.0
 dlib @ dlib-19.24.1-cp311-cp311-win_amd64.whl
 face-recognition==1.3.0
+face-recognition-models==0.3.0
 numpy==1.25.1
 pandas==2.2.0
 pickle-mixin==1.0.2
