--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 ﻿cvlib==0.2.7
 opencv-python==4.9.0.80
+opencv-contrib-python
 cmake>=3.21.0
 dlib @ dlib-19.24.1-cp311-cp311-win_amd64.whl
 face-recognition==1.3.0
