--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 opencv-python==4.9.0.80
 opencv-contrib-python
 cmake>=3.21.0
-dlib 
+dlib==19.24.1
 dlib-bin==19.24.0
 face-recognition==1.3.0
 face-recognition-models==0.3.0
