--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,24 @@
-    name: my_streamlit_env
-    channels:
-      - conda-forge
-    dependencies:
-      - python=3.11
-      - pip
-      - pip:
-        - streamlit==1.26.0
-        - face_recognition==1.3.0
-        - dlib-bin==19.24.0
+name: face-attendance-maker
+channels:
+  - conda-forge
+  - defaults
+dependencies:
+  - python=3.11
+  - numpy=1.25.1
+  - pandas=2.2.0
+  - pillow=10.0.0
+  - cmake>=3.21.0
+  - pip
+  - pip:
+      - cvlib==0.2.7
+      - opencv-python==4.9.0.80
+      - opencv-contrib-python
+      - dlib==19.24.1
+      - dlib-bin==19.24.2
+      - face-recognition==1.3.0
+      - face-recognition-models==0.3.0
+      - pickle-mixin==1.0.2
+      - pickleshare==0.7.5
+      - streamlit==1.43.2
 
         
